rpi5/navidrome/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: navidrome
  labels:
    app: navidrome
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
  serviceName: navidrome
  template:
    metadata:
      name: navidrome
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: navidrome
    spec:
      containers:
        - name: navidrome
          image: deluan/navidrome:0.64.2@sha256:38dc2727bfcfd5ede290f8ada114fc90368146f265ae4701ddddbcbe2a44ee52
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4533
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /data
              name: data
            - mountPath: /music
              name: music
              readOnly: true
          securityContext:
            runAsUser: 2014
            runAsGroup: 3002
            runAsNonRoot: false
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          readinessProbe:
            httpGet:
              port: http
              path: /app
          resources:
            requests:
              cpu: "50m"
              memory: "256Mi"
            limits:
              memory: "1Gi"
      restartPolicy: Always
      securityContext:
        fsGroup: 3002
      volumes:
        - name: music
          hostPath:
            path: /data/Music2
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
