rpi5/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
spec:
  selector:
    app: navidrome
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
