rpi5/navidrome/navidrome-ingress-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: navidrome-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`navidrome.anshulg.direct`)
      services:
        - name: navidrome
          port: 80
  tls:
    secretName: navidrome-public-cert-tls
    domains:
      - main: navidrome.anshulg.direct
